--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "luxon": "^3.5.0",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.12"
   },
   "devDependencies": {
