--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.5",
     "luxon": "^3.5.0",
     "sweetalert2": "^11.14.5",
     "vue": "^3.5.12"
